# nexus3-tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nexus3_tool/: __init__.py  __main__.py  auth.py  cli.py  client.py
